--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Terrence Chan",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
   }
 }
